# inverse_cad

./: .gitignore  CAD.py  CMakeLists.txt  README.md  agent.py  common.py  environment.yml  experiments  export_gif.py  geometric.py  install.sh  singularity  state.py  test.py  test_binding.py  test_exception.py  test_orientation.py  test_rand_poly.py  train  transformer.py  view_wireframe.py
cpp/core/: common.cpp  common.h  config.h  file_helper.cpp  file_helper.h  nef3_wrapper.cpp  nef3_wrapper.h  python_struct.h  scene.cpp  scene.h  scene.i  triangulation.cpp  triangulation.h
cpp/demo/: main.cpp
example/: sofa.nef3  sofa.off
